# my-first-lm

./: .gitignore  .prettierignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  bigram-model.typ  bigram_counter.py  book.typ  build_books.py  create_unigram_model.py  eleventy.config.js  grid.typ  instructions.typ  lighthouserc.json  lm-grid.typ  mise.toml  package-lock.json  package.json  summary.typ  trigram-template.typ
backlog/: config.yml
cli/: AGENTS.md  Cargo.toml  Makefile  book.typ  summary.typ
cli/scripts/: generate_dice_mappings.py
cli/src/: lib.rs  main.rs  preprocessor.rs  text.rs
cli/tests/: capitalization_test.rs  integration_test.rs  regression_output_test.rs  tokenization_test.rs
data/: frankenstein.txt  onegin-deutsch.txt
docs/: instructions.typ
handouts/: 00-weighted-randomness.typ  01-basic-training.typ  02-basic-generation.typ  03-pretrained-generation.typ  04-sampling-strategies.typ  04-trigram.typ  05-context-columns.typ  05-trigram.typ  06-context-columns.typ  06-embeddings.typ  07-embeddings.typ  07-sampling-strategies.typ  08-lora.typ  09-synthetic-data.typ  AGENTS.md  Makefile  poster.typ  utils.typ
scripts/: bigram_counter.py  build_books.py  generate_dice_mappings.py  release.sh
src/: CNAME  about.md  contact.md  index.md  lib.rs  main.rs  preprocessor.rs  related.md  tokenizer.rs
teaching/: 00-weighted-randomness.typ  02-basic-inference.typ  03-pretrained-generation.typ  03-pretrained-inference.typ  06-embeddings.typ  08-lora.typ  09-synthetic-data.typ  CLAUDE.md  (+7 more)
(+235 files in other folders)
