[package]
name = "my_first_lm"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ben Swift <ben@benswift.me>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
frontmatter-gen = { version = "0.0.5", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
