[package]
name = "llms_unplugged"
version = "1.4.7"
edition = "2024"
license = "MIT"
authors = ["Ben Swift <ben@benswift.me>"]
description = "CLI tool for generating N-gram language model booklets"
repository = "https://github.com/ANUcybernetics/llms-unplugged"
homepage = "https://www.llmsunplugged.org"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
